sass/components/_nav.scss
/// 
/// sampsonjacob.com
/// Jacob Sampson
/// 

/* Nav */

.nav {
    max-width: 100%;
    width: 27em;
    position: relative;
    display: block;
    
    cursor: default;
    text-align: center;
    background-color: white;

    &__header {
        padding: 3em;
        position: relative;
        
        background-color: #fff;
        // border-radius: 5px;

        &:before {
            content: '';
            width: 100%;
            height: 30%;
            position: absolute;
            left: 0;
            top: 0;
    
            background-image: linear-gradient(60deg, $fg-muted 5%, $fg-bright);
            // border-radius: 5px 5px 0 0;
        }
    }

    &__heading {
        font-size: 2em;
    }

    &__profile {
        position: relative;
        display: block;
        margin-bottom: 1.5em;
    }

    &__pic {
        display: block;
        margin: 0 auto;
        width: 50%;

        border-radius: 50%;
        box-shadow: 0 0 0 1em #fff;
    }

    &__links {
        display: table;
        table-layout: fixed;
        width: 100%;
    }

    &__link {
        padding: 2em;
        display: table-cell;

        border-bottom: solid white 7px;
        user-select: none;
        cursor: pointer;

        transition: 0.25s cubic-bezier(0.215, 0.610, 0.355, 1);
        
        &:hover {
            border-bottom: solid $fg-bright 7px;
        }

        &:not(:last-child) {
            border-right: solid rgba(0, 0, 0, 0.2) 1px;
        }

        &--selected {
            border-bottom: solid $fg-bright 7px;
        }
    }
}

